[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_name}}"
requires_python = ">={{ cookiecutter.python_version }}"
license = { file="LICENSE" }

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \__*
  | \.*
  | build
  | dist
  | tmp
)/
'''
